# SCOPE

./: CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: imagefolder_example.yaml  selector_rules_v1.yaml  support_diagnostics_vtab19.csv  support_routes_vtab19.csv  support_routes_vtab19.json
docs/: PROTOCOL.md  RESULTS.md  baseline_references.csv
examples/: query_route.sh  train_imagefolder.sh
results/analysis/: fgvc_paired_gaps.csv  selector_ablation.csv  vtab_average_rank.csv  vtab_paired_significance.csv
results/tables/: fgvc_main_comparison.csv  vtab1k_aoft_style_compact.csv  vtab1k_group_summary.csv  vtab1k_natural.csv  vtab1k_specialized.csv  vtab1k_structured.csv
scope/: __init__.py  selector.py
scope/data/: __init__.py  imagefolder.py
scope/diagnostics/: __init__.py  metrics.py  prototypes.py  schema.py  support.py
scope/models/: __init__.py  features.py  inject.py
scope/primitives/: __init__.py  base.py  basis.py  coordinate.py  evidence.py  factory.py  relation.py  state.py  tangent.py
scope/routing/: __init__.py  cli.py  metadata.py  rules.py  selector.py
scope/training/: __init__.py  engine.py
scripts/: run_scope_vtab19.sh  smoke_test.py  train_imagefolder.py
tests/: test_no_result_columns.py  test_routing.py
