[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scope-peft"
version = "0.1.0"
description = "Support-Conditioned Operator Routing for parameter-efficient Vision Transformer adaptation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.21",
  "PyYAML>=6.0",
  "torch>=2.0",
  "torchvision>=0.15",
  "timm>=0.9",
  "tqdm>=4.0",
]

[project.optional-dependencies]
analysis = ["pandas>=1.3", "pytest>=7.0"]
dev = ["pytest>=7.0"]

[project.scripts]
scope-select = "scope.routing.cli:main"

[tool.setuptools.packages.find]
include = ["scope*"]
